# C2

./: .gitignore  CMakeLists.txt  main.c
algos/: CMakeLists.txt  Reactor1.c  Reactor2.c  Reactor3.c  Reactor4.c  Terminal1.c  Terminal2.c  Terminal3.c  Terminal4.c  Terminal5.c
headers/: DeepMain.h  Generator.h  Image.h  Imgstream.h  Protocol.h  Reactor_prcl.h  ReadIO.h  Terminal_prcl.h  WriteIO.h
test_cases/: CMakeLists.txt  Image1.c  Reactor1.c  Reactor2.c  Reactor3.c  Reactor4.c  Terminal1.c  Terminal2.c  Terminal3.c  Terminal4.c  Terminal5.c  Terminal6.c
